tests/fixtures/invalid/divmod_list_set.py
# Cannot call divmod() with List[int], Set[int]
x = divmod([1, 2, 3], {1, 2, 3})
